fix carousel alignment

--- a/leprekus-site/src/components/Carousel/Carousel.css
+++ b/leprekus-site/src/components/Carousel/Carousel.css
@@ -14,6 +14,7 @@ translates to move items around
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 200px;
     background-color: transparent;
     color: #000000;
